Fix the tooltip getting overlapped on smaller screens

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ input {
   position: absolute;
 }
 
+.flex {
+  display: flex;
+}
+
 .container {
   width: 100%;
   height: 100vh;
@@ -154,6 +158,7 @@ h2 {
   padding: 20px 0;
   display: flex;
   gap: 50px;
+  min-width: 450px;
 }
 
 .input-column {
@@ -192,11 +197,16 @@ h2 {
   outline: none;
 }
 
+#password {
+  width: 100%;
+}
+
 .password-help {
   bottom: 0;
   right: -36px;
   width: 32px;
   height: 32px;
+  flex-shrink: 0;
 }
 
 .password-help-tooltip {
@@ -207,8 +217,8 @@ h2 {
   z-index: 1;
   height: 100px;
   width: 200px;
-  bottom: -118px;
-  right: -120px;
+  bottom: -100px;
+  right: -116px;
   padding: 15px;
   text-align: left;
   display: none;
@@ -224,14 +234,14 @@ h2 {
     brightness(108%) contrast(100%);
 }
 
-.error {
+.no-match {
   color: var(--danger);
   position: relative;
 }
-.error > input {
+.no-match > input {
   border-color: var(--danger);
 }
-.error::after {
+.no-match::after {
   content: 'Passwords do not match';
   position: absolute;
   top: 46px;
